--- a/assets/css2/pages/shop-ebook-package.css
+++ b/assets/css2/pages/shop-ebook-package.css
@@ -719,3 +719,12 @@
     padding: 5px 12px;
   }
 }
+
+@media (max-width: 375px) {
+  .bestSellerCard .badge.bestSeller {
+    padding: 6px 12px;
+    font-size: 11px;
+    right: 10px;
+    top: 10px;
+  }
+}
