--- a/assets/css2/pages/shop-ebook-package.css
+++ b/assets/css2/pages/shop-ebook-package.css
@@ -904,3 +904,12 @@ body.page--shop-ebook .siteFooter span,
 body.page--shop-ebook .siteFooter {
   line-height: 1.4;
 }
+
+.siteFooter{
+  width: 100%;
+  text-align: center;
+  margin: 64px auto 0;
+  padding: 24px 16px;
+  font-size: 14px;
+  color: rgba(255,255,255,0.75);
+}
